compatibility-tests/compile-fail/tests/ui/visibility.stderr
error[E0603]: unit struct `PrivateSnafu` is private
  --> tests/ui/visibility.rs:19:30
   |
19 |         let _ = self::inner::PrivateSnafu.build();
   |                              ^^^^^^^^^^^^ private unit struct
   |
note: the unit struct `PrivateSnafu` is defined here
  --> tests/ui/visibility.rs:7:25
   |
 7 |         #[derive(Debug, Snafu)]
   |                         ^^^^^
   = note: this error originates in the derive macro `Snafu` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: unit struct `PubInPathSnafu` is private
  --> tests/ui/visibility.rs:24:33
   |
24 |     let _ = self::outer::inner::PubInPathSnafu.build();
   |                                 ^^^^^^^^^^^^^^ private unit struct
   |
note: the unit struct `PubInPathSnafu` is defined here
  --> tests/ui/visibility.rs:7:25
   |
 7 |         #[derive(Debug, Snafu)]
   |                         ^^^^^
   = note: this error originates in the derive macro `Snafu` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0603]: unit struct `PrivateSnafu` is private
  --> tests/ui/visibility.rs:28:33
   |
28 |     let _ = self::outer::inner::PrivateSnafu.build();
   |                                 ^^^^^^^^^^^^ private unit struct
   |
note: the unit struct `PrivateSnafu` is defined here
  --> tests/ui/visibility.rs:7:25
   |
 7 |         #[derive(Debug, Snafu)]
   |                         ^^^^^
   = note: this error originates in the derive macro `Snafu` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0624]: method `build` is private
  --> tests/ui/visibility.rs:19:43
   |
 7 |         #[derive(Debug, Snafu)]
   |                         ----- private method defined here
...
19 |         let _ = self::inner::PrivateSnafu.build();
   |                                           ^^^^^ private method

error[E0624]: method `build` is private
  --> tests/ui/visibility.rs:24:48
   |
 7 |         #[derive(Debug, Snafu)]
   |                         ----- private method defined here
...
24 |     let _ = self::outer::inner::PubInPathSnafu.build();
   |                                                ^^^^^ private method

error[E0624]: method `build` is private
  --> tests/ui/visibility.rs:28:46
   |
 7 |         #[derive(Debug, Snafu)]
   |                         ----- private method defined here
...
28 |     let _ = self::outer::inner::PrivateSnafu.build();
   |                                              ^^^^^ private method
